WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23122
platform/animation/Animation.cpp includes RenderStyle.h: bad dependency
https://bugs.webkit.org/show_bug.cgi?id=23122
Summary
platform/animation/Animation.cpp includes RenderStyle.h: bad dependency
Simon Fraser (smfr)
Reported
2009-01-05 13:33:36 PST
Animation.cpp breaks the platform abstraction by pulling in RenderStyle.h, for initialAnimationDelay() and friends.
Attachments
patch
(12.17 KB, patch)
2009-01-07 16:57 PST
,
Chris Marrin
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2009-01-07 16:57:18 PST
Created
attachment 26514
[details]
patch
Eric Seidel (no email)
Comment 2
2009-01-07 16:58:52 PST
Comment on
attachment 26514
[details]
patch Looks good.
Chris Marrin
Comment 3
2009-01-07 17:38:26 PST
Sending WebCore/ChangeLog Sending WebCore/css/CSSComputedStyleDeclaration.cpp Sending WebCore/css/CSSHelper.h Sending WebCore/css/CSSStyleSelector.cpp Sending WebCore/platform/animation/Animation.cpp Sending WebCore/platform/animation/Animation.h Sending WebCore/rendering/style/RenderStyle.h Transmitting file data ....... Committed revision 39696.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug