        https://bugs.webkit.org/show_bug.cgi?id=23122

This completes the removal of dependencies on WebKit from the platform code



Canonical link: https://commits.webkit.org/31895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39696 268f45cc-cd09-0410-ab3c-d52691b4dbfc